--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "NODE_ENV=production yarn build:payload && yarn build:server && NEXT_BUILD=true node dist/index.js",
     "dev": "node dev.js",
     "seed": "node seed/index.js",
-    "serve": "NODE_ENV=production node dist/index.js"
+    "serve": "NODE_ENV=production node dist/index.js",
+    "start": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@babel/register": "^7.12.10",
