--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:next": "next build",
     "build:server": "tsc --project tsconfig.server.json",
     "build:payload": "payload build",
-    "build": "SET NODE_ENV=production npm run build:payload && npm run build:server && SET NEXT_BUILD=true node dist/index.js",
+    "build": "NODE_ENV=production npm run build:payload && npm run build:server && NEXT_BUILD=true node dist/index.js",
     "dev": "node dev.js",
     "seed": "node seed/index.js",
     "serve": "NODE_ENV=production node dist/index.js"
